--- a/Ansible/ansible.cfg
+++ b/Ansible/ansible.cfg
@@ -3,6 +3,7 @@ inventory = inventory/aws_ec2.yml
 remote_user = ubuntu
 private_key_file = /home/ubuntu/DevOps-Project/deployer_key
 host_key_checking = False
+deprecation_warnings = False
 
 [ssh_connection]
 ssh_args = -o ControlMaster=auto -o ControlPersist=60s -o StrictHostKeyChecking=no
